--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,20 +22,23 @@ dependencies = [
     "pillow>=12.1.0",
     "torch==2.6.0",
     "torchvision>=0.21.0",
+    "tqdm>=4.67.1",
     "typer==0.15.1",
     "uvicorn==0.34.0",
 ]
 
 [dependency-groups]
 dev = [
+    "cookiecutter==2.6.0",
     "coverage==7.6.9",
     "invoke==2.2.0",
+    "loguru==0.7.3",
+    "mkdocs-material==9.7.1",
+    "mkdocstrings-python==2.0.1",
+    "mypy==1.19.1",
     "pre-commit==4.1.0",
     "pytest==8.3.4",
     "ruff==0.1.3",
-    "mypy==1.19.1",
-    "mkdocs-material==9.7.1",
-    "mkdocstrings-python==2.0.1",
 ]
 
 
