--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
-cookiecutter==2.6.0
+# Deep Learning
+torch==2.6.0
+torchvision>=0.21.0
+
+# Data handling
+pillow>=12.1.0
+
+# CLI and progress bars
+typer==0.15.1
+tqdm>=4.67.1
+
 pytest==8.3.4
 pre-commit==4.1.0
 invoke==2.2.0
+coverage==7.6.9
+ruff==0.1.3
+mypy==1.19.1
+cookiecutter==2.6.0
 loguru==0.7.3
