--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ description = "This is the project description for Group 140 in the 02476 Machin
 authors = [
   { name = "klakawaka", email = "your@email.com" },
 ]
-
 keywords = ["machine learning", "MLOps"]
 classifiers = [
   "Development Status :: 3 - Alpha",
@@ -17,43 +16,54 @@ classifiers = [
 ]
 readme = "README.md"
 requires-python = ">=3.12"
+
 dependencies = [
-    "fastapi==0.115.6",
-    "pillow>=12.1.0",
-    "torch==2.6.0",
-    "torchvision>=0.21.0",
-    "tqdm>=4.67.1",
-    "typer==0.15.1",
-    "uvicorn==0.34.0",
+  "fastapi==0.115.6",
+  "pillow>=12.1.0",
+  "tqdm>=4.67.1",
+  "typer==0.15.1",
+  "uvicorn==0.34.0",
+  "numpy<2",
+
+  # Apple Silicon (M2/M4): modern PyTorch
+  "torch==2.6.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
+  "torchvision>=0.21.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
+
+  # Intel macOS: last supported wheel line is 2.2.x
+  "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
+  "torchvision==0.17.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
+
+  # (Optional) Linux/Windows/CI: use modern PyTorch
+  "torch==2.6.0; sys_platform != 'darwin'",
+  "torchvision>=0.21.0; sys_platform != 'darwin'",
 ]
 
 [dependency-groups]
 dev = [
-    "cookiecutter==2.6.0",
-    "coverage==7.6.9",
-    "invoke==2.2.0",
-    "loguru==0.7.3",
-    "mkdocs-material==9.7.1",
-    "mkdocstrings-python==2.0.1",
-    "mypy==1.19.1",
-    "pre-commit==4.1.0",
-    "pytest==8.3.4",
-    "ruff==0.1.3",
+  "cookiecutter==2.6.0",
+  "coverage==7.6.9",
+  "invoke==2.2.0",
+  "loguru==0.7.3",
+  "mkdocs-material==9.7.1",
+  "mkdocstrings-python==2.0.1",
+  "mypy==1.19.1",
+  "pre-commit==4.1.0",
+  "pytest==8.3.4",
+  "ruff==0.1.3",
 ]
 
-
-[tool.uv.sources]
-torch = [
-    { index = "pytorch-cpu" },
-]
-torchvision = [
-    { index = "pytorch-cpu" },
+[tool.uv]
+# Make the lockfile resolve for BOTH mac architectures
+required-environments = [
+  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
+  "sys_platform == 'darwin' and platform_machine == 'arm64'",
 ]
 
-[[tool.uv.index]]
-name = "pytorch-cpu"
-url = "https://download.pytorch.org/whl/cpu"
-explicit = true
+# (Optional) Limit resolution to macOS only (remove if you also want CI on Linux/Windows)
+environments = [
+  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
+  "sys_platform == 'darwin' and platform_machine == 'arm64'",
+]
 
 [tool.ruff]
 line-length = 120
