--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ manual_test/
 # other local dev info
 .vscode/
 
+# DVC
+/.dvc/cache
+/.dvc/tmp
+/.dvc/config.local
+
 # Mac OS-specific storage files
 .DS_Store
 
@@ -175,3 +180,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+models/*.pth
