--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,18 +24,18 @@ dependencies = [
   "typer==0.15.1",
   "uvicorn==0.34.0",
   "numpy<2",
-
   # Apple Silicon (M2/M4): modern PyTorch
   "torch==2.6.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
   "torchvision>=0.21.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
-
   # Intel macOS: last supported wheel line is 2.2.x
   "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
   "torchvision==0.17.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
-
   # (Optional) Linux/Windows/CI: use modern PyTorch
   "torch==2.6.0; sys_platform != 'darwin'",
   "torchvision>=0.21.0; sys_platform != 'darwin'",
+  "pathspec>=0.12.0,<0.13.0",
+  "dvc>=3.66.1",
+  "dvc-gdrive>=3.0.1",
 ]
 
 [dependency-groups]
