--- a/.gitignore
+++ b/.gitignore
@@ -180,4 +180,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Model artifacts
 models/*.pth
+models/*.pt
+
+# But keep DVC metadata
+!models/*.dvc
+!models/.gitkeep
