--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ dependencies = [
   "pathspec>=0.12.0,<0.13.0",
   "dvc>=3.66.1",
   "dvc-gdrive>=3.0.1",
+  "hydra-core>=1.3.2",
+  "omegaconf>=2.3.0"
 ]
 
 [dependency-groups]
