feat: implement logging and W&B integration (M14)

--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,12 @@ models/*.pt
 # But keep DVC metadata
 !models/*.dvc
 !models/.gitkeep
+
+# Environment variables
+.env
+.env.local
+
+# Logs
+*.log
+logs/
+models/*.log
