--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,10 @@ dependencies = [
   "dvc>=3.66.1",
   "dvc-gdrive>=3.0.1",
   "hydra-core>=1.3.2",
-  "omegaconf>=2.3.0"
+  "omegaconf>=2.3.0",
+  "loguru>=0.7.3",
+  "python-dotenv>=1.2.1",
+  "wandb>=0.24.0",
 ]
 
 [dependency-groups]
