--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,49 +1,35 @@
-name: "Run tests"
+name: CI - Tests, Lint, Cache
 
 on:
   push:
-    branches: [ master, main ]
+    branches: ['main']
   pull_request:
-    branches: [ master, main ]
+    branches: ['main']
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout code
     - name: Checkout repo
       uses: actions/checkout@v6
 
-    # Setup Python
-    - name: Setup Python
+    - name: Setup Python with pip cache
       uses: actions/setup-python@v4
       with:
         python-version: 3.12
+        cache: 'pip'
 
-    # Cache pip packages (your step)
-    - name: Cache pip
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/uv.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
-    # Install dependencies
     - name: Install dependencies
       run: uv sync --dev --locked
 
-    # Install your package so imports work in tests
-    - name: Install package
+    - name: Install package in editable mode
       run: pip install -e src/
 
-    # Optional: Lint code
     - name: Lint code
       run: |
         pip install ruff
         ruff check src/
 
-    # Run tests
     - name: Run tests
       run: uv run pytest -v
