--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,12 +35,14 @@ dependencies = [
   "torchvision>=0.21.0; sys_platform != 'darwin'",
   "pathspec>=0.12.0,<0.13.0",
   "dvc>=3.66.1",
-  "dvc-gdrive>=3.0.1",
   "hydra-core>=1.3.2",
   "omegaconf>=2.3.0",
   "loguru>=0.7.3",
   "python-dotenv>=1.2.1",
   "wandb>=0.24.0",
+  "google-api-python-client>=2.188.0",
+  "google-cloud-storage>=3.8.0",
+  "dvc-gs>=3.0.2",
 ]
 
 [dependency-groups]
