--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,8 @@ dependencies = [
   "google-api-python-client>=2.188.0",
   "google-cloud-storage>=3.8.0",
   "dvc-gs>=3.0.2",
+  "requests>=2.32.5",
+  "python-multipart>=0.0.21",
 ]
 
 [dependency-groups]
