--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,46 @@
 # Deep Learning
 torch==2.6.0
 torchvision>=0.21.0
+numpy<2
 
 # Data handling
 pillow>=12.1.0
 
+# FastAPI and Web
+fastapi==0.115.6
+uvicorn==0.34.0
+python-multipart>=0.0.21
+requests>=2.32.5
+
+# Configuration Management
+hydra-core>=1.3.2
+omegaconf>=2.3.0
+python-dotenv>=1.2.1
+
+# Data Version Control
+dvc>=3.66.1
+dvc-gs>=3.0.2
+pathspec>=0.12.0,<0.13.0
+
+# Experiment Tracking
+wandb>=0.24.0
+
+# Google Cloud
+google-api-python-client>=2.188.0
+google-cloud-storage>=3.8.0
+
 # CLI and progress bars
 typer==0.15.1
 tqdm>=4.67.1
+loguru==0.7.3
 
+# Development Tools
 pytest==8.3.4
+pytest-cov>=6.3.0
 pre-commit==4.1.0
 invoke==2.2.0
 coverage==7.6.9
 ruff==0.1.3
 mypy==1.19.1
 cookiecutter==2.6.0
-loguru==0.7.3
+types-tqdm>=4.67.0.20250809
