--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,9 @@ dependencies = [
   "dvc-gs>=3.0.2",
   "requests>=2.32.5",
   "python-multipart>=0.0.21",
+  "evidently>=0.7.20",
+  "scikit-learn>=1.8.0",
+  "pandas>=2.3.3",
 ]
 
 [dependency-groups]
