--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,11 @@ dependencies = [
   "evidently>=0.7.20",
   "scikit-learn>=1.8.0",
   "pandas>=2.3.3",
+  "onnx>=1.19.0",
+  "onnxruntime>=1.23.2",
+  "onnxscript>=0.5.0",
+  "bentoml>=1.4.33",
+  "ml-dtypes>=0.4.1",
 ]
 
 [dependency-groups]
