--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -10,6 +10,7 @@ jobs:
   build:
     name: ${{ matrix.os }} / Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 20
 
     strategy:
       fail-fast: false
@@ -22,30 +23,31 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
 
       - name: Install uv
         run: pip install uv
 
-      - name: Install dependencies (cached)
+      - name: Install dependencies (locked)
         run: uv sync --dev --locked
 
-      # CPU-only PyTorch install (safe for CI)
-      - name: Install PyTorch
+      - name: Install PyTorch (CPU-only)
         run: |
           uv pip install torch torchvision torchaudio \
             --index-url https://download.pytorch.org/whl/cpu
 
-      - name: Install package in editable mode
-        run: pip install -e .
+      - name: Install project (editable)
+        run: uv pip install -e .
 
       - name: Lint with Ruff
         run: |
-          pip install ruff
-          ruff check src/
+          uv run ruff check .
+          uv run ruff format . --check
 
       - name: Run tests
+        env:
+          WANDB_DISABLED: "true"
+          WANDB_MODE: "disabled"
         run: uv run pytest -v
