--- a/.github/workflows/gcs-sync.yaml
+++ b/.github/workflows/gcs-sync.yaml
@@ -77,4 +77,7 @@ jobs:
             --memory 4Gi \
             --cpu 2 \
             --timeout 3600 \
+            --port 8000 \
+            --cpu-boost \
+            --no-cpu-throttling \
             --quiet
